using the "f" key to do different file stuff
using the "f" key to do different file stuff 
ff = original f behavior
fs = save file

--- a/settings.json
+++ b/settings.json
@@ -15,6 +15,16 @@
   ],
   "vim.normalModeKeyBindingsNonRecursive": [
     {
+      "before": ["f", "f"],
+      "after": ["f"]
+    },
+    {
+      "before": ["f", "s"],
+      "commands": [
+           "workbench.action.files.save"
+       ]
+    },
+    {
       "before": ["<leader>", "d"],
       "after": ["d", "d"]
     },
